--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                 <p>
                     <img width="15px" src="./icon.svg" alt="">
                 </p>
+                <p>
+                    <img width="300px" src="./task-icon.svg" alt="">
+                </p>
             </div>
             <div class="column">
                 
